--- a/index.html
+++ b/index.html
@@ -29,10 +29,27 @@
                <div class="window">
                 <div class="window-big"></div>
                 <div class="window-small"></div>
-
                </div>
-            </div>
-           
+            </div>     
+        </section>
+        <section class="debug big-box">
+            <div class="container">
+                <div class="window">
+                 <div class="window-small"></div>
+                 <div class="window-big"></div>
+                </div>
+             </div>     
+        </section>
+        <section>
+            <div class="container">
+                <div class="window">
+                 <div class="window-big"></div>
+                 <div class="window-small"></div>
+                </div>
+             </div>     
+        </section>
+        <section class="debug big-box-grey">
+            <div class=" container green-box"></div>
         </section>
         <!-- /creazione main -->
     </main>
