--- a/index.html
+++ b/index.html
@@ -53,7 +53,24 @@
         </section>
         <!-- /creazione main -->
     </main>
-    <footer></footer>
-    
+    <footer >
+        <!-- creazione footer -->
+        <div class="container box-footer">
+            <div class="footer-small"></div>
+            <div class="footer-big">    
+                <div class="col-footer"></div>
+                <div class="col-footer"></div>
+                <div class="col-footer"></div>
+                <div class="col-footer"></div>  
+            </div>                    
+        </div >
+            <div class="second-footer">
+                <div class="container option-footer">
+                    <button>Logo</button>
+                    <button>Bottone</button>
+                </div>
+         </div>
+        <!-- /creazione footer -->
+    </footer>
 </body>
 </html>
